<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.yajhz.ui.activities.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.signin.SignInActivity"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/yajhz_logo"
            android:layout_width="120dp"
            android:layout_height="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/yahjz_logo"
            android:layout_marginTop="230dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/form_cardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yajhz_logo"
            android:layout_marginTop="70dp"
            style="@style/MyCardView"
            android:backgroundTint="@color/white"
            app:contentPaddingLeft="5dp"
            app:contentPaddingRight="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/form_cardView_constraintlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/signin_text"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeWidth="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textColor="#484848"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/email_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="#484848"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signin_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="7dp"
                    android:hint="@string/write_your_email"
                    android:textColorHint="#C4C4C4"
                    app:boxCornerRadiusBottomEnd="18dp"
                    app:boxCornerRadiusBottomStart="18dp"
                    app:boxCornerRadiusTopEnd="18dp"
                    app:boxCornerRadiusTopStart="18dp"
                    app:layout_constraintTop_toBottomOf="@id/email_textView"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:Error="@{vm.emailErrorLiveData}"
                   >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/shadow"
                        android:inputType="textEmailAddress"
                        android:text="@={vm.emailLiveData}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/Password_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/password"
                    android:textColor="#484848"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PasswordTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="7dp"
                    android:hint="@string/write_8_character_at_least"
                    android:textColorHint="#C4C4C4"
                    app:boxCornerRadiusBottomEnd="18dp"
                    app:boxCornerRadiusBottomStart="18dp"
                    app:boxCornerRadiusTopEnd="18dp"
                    app:boxCornerRadiusTopStart="18dp"
                    app:layout_constraintTop_toBottomOf="@id/Password_textView"
                    style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:Error="@{vm.passwrodErrorLiveData}"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Email_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/shadow"
                        android:inputType="textPassword"
                        android:text="@={vm.passwrodLiveData}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/SignIn_button"
                    style="@style/btn_style"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/button_background"
                    android:padding="15dp"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PasswordTextInputLayout" />

                <TextView
                    android:id="@+id/Dont_have_an_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#484848"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/SignIn_button" />

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_up_small"
                    android:textColor="@color/green"
                    app:layout_constraintBottom_toBottomOf="@id/Dont_have_an_account_text"
                    app:layout_constraintStart_toEndOf="@id/Dont_have_an_account_text"
                    app:layout_constraintTop_toTopOf="@id/Dont_have_an_account_text" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="213dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>