<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.yajhz.ui.activities.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/activity_home"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/user_constraintLayout"
            android:padding="20dp">

            <TextView
                android:id="@+id/hello_user_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="25sp"
                android:textColor="#484848"
                android:text="Hello Ahmed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addresses_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hello_user_textView"
                app:layout_constraintStart_toStartOf="@id/hello_user_textView"
                android:text="9-Naser St,Cairo"
                android:textSize="20sp"
                android:textColor="#484848" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/right_arrow"
                app:layout_constraintStart_toEndOf="@id/addresses_textView"
                app:layout_constraintBottom_toBottomOf="@id/addresses_textView"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="4dp" />

            <ImageButton
                android:id="@+id/search_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/search_ic"
                app:layout_constraintStart_toEndOf="@id/searchTextInputLayout"
                app:layout_constraintBottom_toBottomOf="@id/searchTextInputLayout"
                app:layout_constraintTop_toTopOf="@id/searchTextInputLayout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp" />

            <ImageButton
                android:id="@+id/filter_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/filter_ic"
                app:layout_constraintStart_toEndOf="@id/search_ic"
                app:layout_constraintBottom_toBottomOf="@id/search_ic"
                app:layout_constraintTop_toTopOf="@id/search_ic"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchTextInputLayout"
                android:layout_width="270dp"
                android:layout_height="50dp"
                android:layout_marginTop="7dp"
                android:hint="@string/search_for_fav_food"
                android:textColorHint="#C4C4C4"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addresses_textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shadow"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category_ConstraintLayout"
            app:layout_constraintTop_toBottomOf="@id/user_constraintLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category_textView"
                android:text="@string/category"
                android:textColor="#484848"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                tools:listitem="@layout/item_category"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/category_textView"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#FFD279"
                android:layout_marginEnd="20dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/category_textView"
                android:text="View all" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popular_ConstraintLayout"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/category_ConstraintLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popular_textView"
                android:text="@string/popular_now"
                android:textColor="#484848"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popular_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                tools:listitem="@layout/item_popular"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/popular_textView"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#FFD279"
                android:layout_marginEnd="20dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/popular_textView"
                android:text="View all" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/treding_ConstraintLayout"
            app:layout_constraintTop_toBottomOf="@id/popular_ConstraintLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trending_textView"
                android:text="@string/trending_now"
                android:textColor="#484848"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="40dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                tools:listitem="@layout/item_trending"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/trending_textView"
                android:backgroundTint="@color/white"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="#FFD279"
                android:layout_marginEnd="20dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/trending_textView"
                android:text="@string/view_all" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>